<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:theme="@style/small_dialog">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/my_teal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#008080"
            android:padding="5dp"
            android:text="@string/update_man"
            android:textAlignment="center"
            android:textColor="#fff"
            android:layout_row="1"
            android:layout_column="0" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/filler"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:id="@+id/textViewInfo"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/progressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_and_inst"
        android:id="@+id/downInstall"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:id="@+id/goBack"
        android:layout_gravity="center" />
</LinearLayout>