<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:theme="@style/small_dialog">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/my_teal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#008080"
            android:padding="5dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#fff"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:id="@+id/button_info"
            android:layout_row="1"
            android:layout_column="21"
            android:layout_marginEnd="5dp"/>
    </GridLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:minHeight="20dp" />

    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="25dp"
            android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="200dp"
            android:id="@+id/enterName"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="start"
            android:saveEnabled="true"
            android:lines="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save_name"
            android:layout_gravity="end"
            android:id="@+id/saveName" />

        </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp">

    </TableRow>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="?android:attr/buttonBarStyle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="25dp"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/modifier1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_modifier"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/modifier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_modifier"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/modifier3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_modifier"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f1"
                android:layout_gravity="center"
                android:id="@+id/button1" />


            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f2"
                android:layout_gravity="center"
                android:id="@+id/button2" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f3"
                android:layout_gravity="center"
                android:id="@+id/button3" />
        </TableRow>


        <GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/filler"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/padding"
            android:layout_gravity="center"/>
        </GridLayout>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="15dp"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/modifier4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_modifier"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/modifier5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_modifier"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/modifier6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_modifier"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f4"
                android:layout_gravity="center"
                android:id="@+id/button4" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f5"
                android:layout_gravity="center"
                android:id="@+id/button5" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f6"
                android:layout_gravity="center"
                android:id="@+id/button6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_back"
                android:id="@+id/goBack"
                android:layout_gravity="center"
                android:layout_column="1" />

        </TableRow>

    </TableLayout>

</LinearLayout>