<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/webview2"
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:layout_weight="1.04" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="34dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:id="@+id/button_back"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:id="@+id/button_forward"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:id="@+id/button_refresh"
            android:layout_row="1"
            android:layout_column="21" />
    </GridLayout>
</LinearLayout>