<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:theme="@style/small_dialog">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/my_teal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#008080"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:id="@+id/button_info"
            android:layout_row="1"
            android:layout_column="21"
            android:layout_marginEnd="5dp"/>
    </GridLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="25dp">

    <TextView
        android:id="@+id/keyheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAlignment="center"
        android:text="@string/keypress"
        android:layout_row="1"
        android:layout_column="0" />
    </TableRow>

    <ListView
        android:id="@+id/list"
        android:layout_width="300dp"
        android:layout_height="175dp"
        android:scrollingCache="true"
        android:layout_gravity="top"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="25dp">
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="25dp">

        <TextView
            android:id="@+id/modifierheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="center"
            android:text="@string/opt_mod"
            android:layout_row="1"
            android:layout_column="0" />
    </TableRow>

    <ListView
        android:id="@+id/list2"
        android:scrollingCache="true"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="bottom"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:id="@+id/goBack"
        android:layout_gravity="center" />
</LinearLayout>